# email2md

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
src/email2md/: __init__.py  __main__.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_error_handling.py  test_conversion.py  test_format_detection.py  test_html_conversion.py  test_integration.py  test_markdown_conversion.py  test_options.py
tests/fixtures/: test.msg
